# msic-music-app

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.cargo/: config.toml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test_filter.rs  test_search.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app.toml  get-audio-url.toml
src-tauri/permissions/player/: get-audio-url.toml  play-audio.toml
src-tauri/src/: lib.rs  player_plugin.rs
src-tauri/src/audio/: mod.rs  player.rs  resolver.rs
src-tauri/src/cache/: mod.rs  smart_cache.rs
src-tauri/src/intelligence/: autoplay.rs  listenbrainz.rs  mod.rs  musicbrainz.rs
src-tauri/src/tasks/: manager.rs  mod.rs  preload.rs
src/app/: extractor.ts  globals.css  layout.tsx  lyrics-engine.ts  music-search.ts  page.module.css  page.tsx  playlist-import.ts  youtube-engine.ts
