[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
dirs = "6.0.0"
tauri-plugin-http = "2.5.8"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
dashmap = "5.5.3"
axum = "0.7"

[profile.release]
strip = true        # Elimina símbolos de depuración (~70% menos peso)
opt-level = "z"     # Optimizar por tamaño mínimo
lto = true          # Link-Time Optimization (fusiona y elimina código muerto)
codegen-units = 1   # Mejor optimización (más lento de compilar, pero más pequeño)
panic = "abort"     # Menor overhead en manejo de errores
